# gaze.rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.gce.yaml  cloudbuild.yaml
benches/: storage_benchmark.rs
client/: Cargo.toml  Dockerfile
client/.criterion/fib 20/new/: estimates.json  sample.json  tukey.json
client/.criterion/generate id/base/: estimates.json  sample.json  tukey.json
client/.criterion/generate id/change/: estimates.json
client/.criterion/generate id/new/: estimates.json  sample.json  tukey.json
client/.criterion/generate num-based id/base/: estimates.json  sample.json  tukey.json
client/.criterion/generate num-based id/change/: estimates.json
client/.criterion/generate num-based id/new/: estimates.json  sample.json  tukey.json
client/benches/: id_benchmark.rs
client/src/: actor.rs  main.rs
client/src/gaze/: encode.rs  mod.rs  protocol.rs  reader.rs
client/src/protocol/: mod.rs  out.rs  types.rs
deploy/: client.yaml  pipeline.yaml  server.yaml
kubernetes/: definition.yaml  service.yaml
src/: client.rs  connection.rs  errors.rs  lib.rs  main.rs  mode.rs  operation.rs  registry.rs  router.rs  schema.rs  server.rs  subscription.rs
src/codec/: avro.rs  mod.rs  number.rs  numbers.rs  reader.rs  registry.rs  schema.rs
src/protocol/: command.rs  eater.rs  in.rs  ingest.rs  message.rs  mod.rs  out.rs  reader.rs  types.rs  writer.rs
src/selection/: filter.rs  mod.rs  selector.rs  subscription.rs
src/server/: client.rs  connection.rs  mod.rs  router.rs  server.rs
src/storage/: mod.rs
(+14 files in other folders)
