[package]
name = "gaze"
version = "0.1.0"
authors = ["Ivo Sequeros <ivosequeros@me.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures = "0.3"
derive_more = { version = "0.99.5", features = ["from"] }
avro-rs = "0.9.1"
failure = "0.1.7"
