[package]
name = "gaze"
version = "0.1.0"
authors = ["Ivo Sequeros <ivosequeros@me.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
futures = "0.3"
derive_more = { version = "0.99.5", features = ["from"] }
failure = "0.1.7"
serde_json = "1.0.53"
avro-rs = "0.10.0"
async-trait = "0.1.31"
rand = "0.7.3"
fasthash = "0.4.0"
criterion = "0.3.2"
sys-info = "0.7.0"


[[bench]]
name = "storage_benchmark"
harness = false
